--- a/config/database.yml
+++ b/config/database.yml
@@ -4,17 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-#  adapter: postgresql
-#  encoding: utf8
-#  database: db/development
-#  pool: 5
-#  timeout: 5000
-
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: db/development
   pool: 5
   timeout: 5000
-  
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
